more pages tweaks

--- a/.github/workflows/site-deployment.yaml
+++ b/.github/workflows/site-deployment.yaml
@@ -34,3 +34,10 @@ jobs:
         done
     - name: Upload Pages artifact
       uses: actions/upload-pages-artifact@v2
+  deploy:
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
+
