--- a/.github/workflows/site-deployment.yaml
+++ b/.github/workflows/site-deployment.yaml
@@ -36,6 +36,7 @@ jobs:
       uses: actions/upload-pages-artifact@v2
   deploy:
     needs: build
+    runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
